

*lh-sources-3.11.4 (08 Oct 2013)

  08 Oct 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.11.3.ebuild,
  +lh-sources-3.11.4.ebuild:
  Fix the genpatches versions

*lh-sources-3.10.15 (08 Oct 2013)

  08 Oct 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.15.ebuild,
  lh-sources-3.11.3.ebuild:
  Bump to latest aufs3, linux and genpatches release

*lh-sources-3.11.3 (02 Oct 2013)

  02 Oct 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.11.3.ebuild:
  Bump to latest linux and genpatches

  30 Sep 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.13.ebuild,
  lh-sources-3.11.2.ebuild:
  Fix aufs3 releases

  30 Sep 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.13.ebuild,
  lh-sources-3.11.2.ebuild:
  Fix Version of aufs3 release

*lh-sources-3.11.2 (30 Sep 2013)
*lh-sources-3.10.13 (30 Sep 2013)

  30 Sep 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.13.ebuild,
  +lh-sources-3.11.2.ebuild, +files/lh-sources-3.11-armv6.patch:
  Bump to latest aufs3, linux and genpatches release

  17 Sep 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.12.ebuild:
  Add workaround for BFQ

*lh-sources-3.10.12 (17 Sep 2013)

  17 Sep 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.12.ebuild:
  Bump to latest aufs3, linux and genpatches release
  21 Aug 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.9.ebuild,
  -files/0001-block-Switch-from-BFQ-v6r2-for-3.10.0-to-BFQ-v6r2-fo.patch:
  Uses latest genpatches

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.9.ebuild:
  Use epatch

*lh-sources-3.10.9 (21 Aug 2013)

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.9.ebuild,
  +files/0001-block-Switch-from-BFQ-v6r2-for-3.10.0-to-BFQ-v6r2-fo.patch:
  Bump to latest auf and linux release

*lh-sources-3.10.7 (16 Aug 2013)

  16 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.7.ebuild:
  Bump to latest genpatches/Linux releases

*lh-sources-3.10.6 (15 Aug 2013)
