@@ -45,6 +45,8 @@ DIST genpatches-3.11-7.extras.tar.xz 16644 SHA256 7039fea3cac3eb3a9e7468d0db479d
 DIST genpatches-3.9-17.base.tar.xz 290752 SHA256 66f3fc418d7faee9809d35df9e4c17da8d84286c8b48e0e5149fa626af2c7a2d SHA512 5a849ad1b2259a5ba45698942ef224231b664cff7bcc6a02b2fe94e317a961ceb1198b6a9c0550bafdc53671fd4db5d323c3f0efb24d3956e8297e32f9369d25 WHIRLPOOL 1cd46b907bc07d130199085c58b5793681577921542b099241aa937cd95dff0f18c91ea8a6eda52e3d1ae2928709678947de4d1f5266aeafe6406a785ec1d75b
 DIST genpatches-3.9-17.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
+DIST lh-sources-kernel-310-gcc48-2.patch 14066 SHA256 ac1e5840e14e8601a79b8070b875e3f98cad532436637d5fa2022bdd3d442eae SHA512 4371d9958086235af64a013b21c1fe425ce4ad184fcba1499e979243e6c523a8ab80c59efd4f834173395b06696361e0471573fb768e7d384efcf7a628b36839 WHIRLPOOL 9b10834d36037ed1a511ad4be864a59b3d3fd0d190aa5d9b64873edb7d545e8cb21aa866ea5af0dc2120ae54d5c507fcb7a1d1e19fb960a9e1990f4da74f548f
+DIST lh-sources-kernel-311-gcc48-1.patch 14066 SHA256 30e84e6f86bfb3d901355ee6329d8dac2193671139da7e504ee782d50265a292 SHA512 7d4f80c3905bbab33736317b0b1c0771228659b3ef1cb476715c85ae42bede011e83cb825c66b87e3b92788432a9d31a85fd8438428299dd195262083e9bc68f WHIRLPOOL fbad5fa34dc3daebe32a3fcba51c6f21275bacbdc485ae785b07e11608431d8d5d88f18e6f4e03b6d8c73a998d29f54875e8402b1dba450e36cebbd3f4734f9a
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST linux-3.11.tar.xz 75082460 SHA256 803ec8f0ad4b2ddedcb0332a590cd2b5e10dfc57c3b1c95bc9c46af81d51d7f9 SHA512 b3680d3a45a7308383cf8634a7f1908e94f6e1c6d1cb587332a9418a95fb93bd3c73ab70c6976c7330508d7c8c6b0f43c2a9a2efde5fe1f76e9bfffb1de5686c WHIRLPOOL 96c9c27ffe155fe2c1760b53d87ef981943d58ab2dcf1ed6bd2c1e762e18bceec81d85d49c523947ec6fe52e41f25c4a86310347705c8d4b80a1748cec5b90d3
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
